@@ -14,6 +14,8 @@ Development trunk
   - Upgraded to cryptlib-1.7, Added the SHA-3 algorithm, Keccek
   - Option max_matches was setting max_internal_matches. Fixed (BB issue #4)
   - op=hget now supports option=mr for completeness (BB issue #17)
+  - Add CORS header to web server responses. Allows JavaScript code to
+    interact with keyservers, for example the OpenPGP.js project.
 
 1.1.4
   - Fix X-HKP-Results-Count so that limit=0 returns no results, but include
